# esp32-ota-demo

./: Cargo.toml  runner.sh  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
