cargo-features = ["strip"]

[package]
name = "esp32-ota"
version = "0.1.0"
authors = ["Anthony Canino <git@anthonycanino.com>"]
edition = "2018"
resolver = "2"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }


[profile.release]
opt-level = "s"
debug = false
panic = "abort"
strip = true
lto = true
codegen-units = 1


[profile.dev]
debug = 1 # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]
default = ["native", "experimental"]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]
factory = []

[dependencies]
embedded-hal = "0.2.6"
embedded-svc = "0.16.2"
esp-idf-hal = "0.32.2"
# esp-idf-svc = {version = "0.36.1" }
esp-idf-svc = {path = "./libs/esp-idf-svc"}
esp-idf-sys = { version = "0.30.1", features = ["binstart"] }
anyhow = "1.0.52"
semver = "1.0.4"
log = "0.4.14"
serde_json = "1.0.75"
serde = "1.0.133"


[build-dependencies]
embuild = "0.28.0"
anyhow = "1"
